--- a/src/Web/WebSPA/ClientApp/src/app/layout/components/sidebar/sidebar.component.html
+++ b/src/Web/WebSPA/ClientApp/src/app/layout/components/sidebar/sidebar.component.html
@@ -28,6 +28,10 @@
             <i class="fa fa-th-list"></i>&nbsp;
             <span>{{ 'Component' | translate }}</span>
         </a>
+        <a [routerLink]="['/serveurs']" [routerLinkActive]="['router-link-active']" class="list-group-item">
+            <i class="fa fa-fw fa-server"></i>&nbsp;
+            <span>{{ 'Serveurs' | translate }}</span>
+        </a>
         <div class="nested-menu">
             <a class="list-group-item" (click)="addExpandClass('pages')">
                 <i class="fa fa-plus"></i>&nbsp;
