Ajustement langue et icone dans breadcrumb

--- a/src/Web/WebSPA/ClientApp/src/app/layout/components/sidebar/sidebar.component.html
+++ b/src/Web/WebSPA/ClientApp/src/app/layout/components/sidebar/sidebar.component.html
@@ -30,7 +30,7 @@
         </a>
         <a [routerLink]="['/serveurs']" [routerLinkActive]="['router-link-active']" class="list-group-item">
             <i class="fa fa-fw fa-server"></i>&nbsp;
-            <span>{{ 'Serveurs' | translate }}</span>
+            <span>{{ 'Servers' | translate }}</span>
         </a>
         <div class="nested-menu">
             <a class="list-group-item" (click)="addExpandClass('pages')">
