Correction langue francaise + popup aligné à droite.

--- a/src/Web/WebSPA/ClientApp/src/app/layout/components/header/header.component.html
+++ b/src/Web/WebSPA/ClientApp/src/app/layout/components/header/header.component.html
@@ -6,7 +6,7 @@
     </button>
     <div class="collapse navbar-collapse">
         <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="text" placeholder="{{ 'Search' | translate }}" >
+            <input class="form-control mr-sm-2" type="text" placeholder="{{ 'Search' | translate }}">
         </form>
         <ul class="navbar-nav ml-auto">
             <!-- <li class="nav-item d-none d-xl-block">
@@ -87,22 +87,23 @@
             </li> -->
             <li class="nav-item dropdown" ngbDropdown>
                 <a href="javascript:void(0)" class="nav-link" ngbDropdownToggle>
-                    <i class="fa fa-language"></i> {{ 'Language' | translate }} <b class="caret"></b>
+                    <i class="fa fa-language"></i> {{ 'Language' | translate }}
+                    <b class="caret"></b>
                 </a>
-                <div class="dropdown-menu-right" ngbDropdownMenu>
+                <div ngbDropdownMenu aria-labelledby="dropdownConfig">
                     <a class="dropdown-item" href="javascript:void(0)" (click)="changeLang('en')">
                         {{ 'English' | translate }}
                     </a>
                     <a class="dropdown-item" href="javascript:void(0)" (click)="changeLang('fr')">
                         {{ 'French' | translate }}
                     </a>
-                    <a class="dropdown-item" href="javascript:void(0)" (click)="changeLang('ur')">
+                    <!-- <a class="dropdown-item" href="javascript:void(0)" (click)="changeLang('ur')">
                         {{ 'Urdu' | translate }}
-                    </a>
+                    </a> -->
                     <a class="dropdown-item" href="javascript:void(0)" (click)="changeLang('es')">
                         {{ 'Spanish' | translate }}
                     </a>
-                    <a class="dropdown-item" href="javascript:void(0)" (click)="changeLang('it')">
+                    <!-- <a class="dropdown-item" href="javascript:void(0)" (click)="changeLang('it')">
                         {{ 'Italian' | translate }}
                     </a>
                     <a class="dropdown-item" href="javascript:void(0)" (click)="changeLang('fa')">
@@ -113,14 +114,15 @@
                     </a>
                     <a class="dropdown-item" href="javascript:void(0)" (click)="changeLang('zh-CHS')">
                         {{ 'Simplified Chinese' | translate }}
-                    </a>
+                    </a> -->
                 </div>
             </li>
             <li class="nav-item dropdown" ngbDropdown>
                 <a href="javascript:void(0)" class="nav-link" ngbDropdownToggle>
-                    <i class="fa fa-user"></i> John Smith <b class="caret"></b>
+                    <i class="fa fa-user"></i> John Smith
+                    <b class="caret"></b>
                 </a>
-                <div class="dropdown-menu-right" ngbDropdownMenu>
+                <div ngbDropdownMenu aria-labelledby="dropdownConfig">
                     <a class="dropdown-item" href="javascript:void(0)">
                         <i class="fa fa-fw fa-user"></i> {{ 'Profile' | translate }}
                     </a>
