Ajout traduction espagnol + enlever élément de menu à gauche

--- a/src/Web/WebSPA/ClientApp/src/app/layout/serveur/serveur.component.html
+++ b/src/Web/WebSPA/ClientApp/src/app/layout/serveur/serveur.component.html
@@ -1,5 +1,5 @@
 <div>
-  <app-page-header [heading]="'Serveurs'" [icon]="'fa-fw fa-server'"></app-page-header>
+  <app-page-header heading="{{ 'Servers' | translate }}" [icon]="'fa-fw fa-server'"></app-page-header>
   <p>
     serveur works!
   </p>
