--- a/src/Web/WebSPA/ClientApp/src/app/layout/components/sidebar/sidebar.component.html
+++ b/src/Web/WebSPA/ClientApp/src/app/layout/components/sidebar/sidebar.component.html
@@ -28,10 +28,16 @@
             <i class="fa fa-th-list"></i>&nbsp;
             <span>{{ 'Component' | translate }}</span>
         </a> -->
+
         <a [routerLink]="['/serveurs']" [routerLinkActive]="['router-link-active']" class="list-group-item">
             <i class="fa fa-fw fa-server"></i>&nbsp;
             <span>{{ 'Servers' | translate }}</span>
         </a>
+        <a [routerLink]="['/groupe-serveurs']" [routerLinkActive]="['router-link-active']" class="list-group-item">
+            <i class="fa fa-fw fa-object-group"></i>&nbsp;
+            <span>Groupe Serveur</span>
+        </a>
+        
         <!-- <div class="nested-menu">
             <a class="list-group-item" (click)="addExpandClass('pages')">
                 <i class="fa fa-plus"></i>&nbsp;
