--- a/src/Web/WebSPA/ClientApp/src/app/layout/groupe-serveur/groupe-serveur-detail/groupe-serveur-detail.component.html
+++ b/src/Web/WebSPA/ClientApp/src/app/layout/groupe-serveur/groupe-serveur-detail/groupe-serveur-detail.component.html
@@ -1,5 +1,64 @@
-<p>
-  groupe-serveur-detail works!
-</p>
+<div>
+  <app-page-header heading="Groupe Serveur" [icon]="'fa-fw fa-object-group'"></app-page-header>
+  <h2>{{ groupeserveur.nom }}</h2>
 
-<button class="btn btn-default" [routerLink]="['/groupe-serveurs']">Retour</button>
+</div>
+
+<div class="row">
+
+  <div class="col-lg-6">
+
+    <div class="card card-default">
+      <div class="card-header">
+        Informations générales
+      </div>
+      <div class="card-body">
+
+        <div class="row">
+
+
+          <div class="form-group col-lg-12">
+            <label for="description">Description</label>
+            <input id="description" type="text" class="form-control">
+          </div>
+
+
+        </div>
+
+        <div class="row">
+
+          <div class="form-group col-lg-4">
+            <label for="categorie">Catégorie</label>
+            <select class="form-control" id="categorie" required>
+              <option *ngFor="let pow of ['',1,2,3,4]" [value]="pow">{{pow}}</option>
+            </select>
+          </div>
+
+          <div class="form-group col-lg-4">
+            <label for="zone">Zone</label>
+            <input id="zone" type="text" class="form-control">
+          </div>
+
+          <div class="form-group col-lg-4">
+            <label for="numero">Numéro</label>
+            <select class="form-control" id="numero" required>
+              <option *ngFor="let pow of [1,2,3,4,5,6,7,8,9,10]" [value]="pow">{{pow}}</option>
+            </select>
+          </div>
+
+        </div>
+
+      </div>
+    </div>
+
+  </div>
+
+</div>
+
+<div class="row">
+  <div class="col-lg-12">
+    <div class="pull-right">
+      <button class="btn btn-default" [routerLink]="['/groupe-serveurs']">Retour</button>
+    </div>
+  </div>
+</div>
