--- a/src/Web/WebSPA/ClientApp/src/app/layout/groupe-serveur/groupe-serveur-detail/groupe-serveur-detail.component.html
+++ b/src/Web/WebSPA/ClientApp/src/app/layout/groupe-serveur/groupe-serveur-detail/groupe-serveur-detail.component.html
@@ -4,61 +4,43 @@
 
 </div>
 
-<div class="row">
+<div *ngIf="myForm">
 
-  <div class="col-lg-6">
+  <div class="row">
 
-    <div class="card card-default">
-      <div class="card-header">
-        Informations générales
-      </div>
-      <div class="card-body">
+    <div class="col-lg-12">
+
+      <form [formGroup]="myForm" novalidate (ngSubmit)="enregistrer(myForm)">
 
         <div class="row">
 
+          <div class="col-lg-8">
 
-          <div class="form-group col-lg-12">
-            <label for="description">Description</label>
-            <input id="description" type="text" class="form-control">
+            <app-gs-information-generale [groupeServeurForm]="myForm" class="mb-3"></app-gs-information-generale>
+
           </div>
 
-
-        </div>
-
-        <div class="row">
-
-          <div class="form-group col-lg-4">
-            <label for="categorie">Catégorie</label>
-            <select class="form-control" id="categorie" required>
-              <option *ngFor="let pow of ['',1,2,3,4]" [value]="pow">{{pow}}</option>
-            </select>
-          </div>
-
-          <div class="form-group col-lg-4">
-            <label for="zone">Zone</label>
-            <input id="zone" type="text" class="form-control">
-          </div>
-
-          <div class="form-group col-lg-4">
-            <label for="numero">Numéro</label>
-            <select class="form-control" id="numero" required>
-              <option *ngFor="let pow of [1,2,3,4,5,6,7,8,9,10]" [value]="pow">{{pow}}</option>
-            </select>
+          <div class="col-lg-4">
+            <app-gs-categorisation [groupeServeurForm]="myForm" class="mb-3"></app-gs-categorisation>
           </div>
 
         </div>
 
+      </form>
+
+    </div>
+
+  </div>
+
+  <div class="row mt-3">
+    <div class="col-lg-12">
+      <div class="">
+        <button class="btn mr-2" type="submit" 
+                [ngClass]="{'btn-primary':myForm.dirty, 'btn-outline-primary':!myForm.dirty}"
+                [disabled]="!myForm.valid || !myForm.dirty" >Enregistrer</button>
+        <button class="btn btn-default mr-2" [routerLink]="['/groupe-serveurs']">Retour</button>
       </div>
     </div>
-
   </div>
 
-</div>
-
-<div class="row">
-  <div class="col-lg-12">
-    <div class="pull-right">
-      <button class="btn btn-default" [routerLink]="['/groupe-serveurs']">Retour</button>
-    </div>
-  </div>
 </div>
